# reasoning-consistency-distillation

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: 01_train_teacher.py  02_train_baseline_student.py  03_train_distilled_student.py  04_compare_phase2.py  05_evaluate_phase3.py  06_train_variants.py  07_analyze_phase4.py
src/: __init__.py
src/data/: cifar10.py
src/evaluation/: cka.py  gradcam.py  metrics.py  saliency_metrics.py
src/models/: student.py  teacher.py
src/training/: distillation.py  trainer.py
src/visualization/: plots.py  saliency_plots.py
