[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning-consistency-distillation"
version = "0.1.0"
description = "Auditing Reasoning Consistency Under Knowledge Distillation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
